# alexmingoia.github.io

./: .gitignore  CNAME  Site.hs  alexmingoia.cabal  index.html  stack.yaml
css/: screen.css
feed/: index.xml
pages/: resume.html
posts/: a-brief-history-of-javascripts-console.md
posts/a-brief-history-of-javascripts-console/: index.html
resume/: index.html
templates/: default.html  layout-post.html  layout.html  post.html
