name:                alexmingoia
version:             0.1.0.0
synopsis:            Source code for alexmingoia.com
description:         Please see README.md
homepage:            http://github.com/alexmingoia/alexmingoia.com/
license:             BSD3
license-file:        LICENSE
author:              Alexander C. Mingoia
maintainer:          talk@alexmingoia.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable alexmingoia.com
  hs-source-dirs:      .
  main-is:             Site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , filepath
                     , hakyll
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexmingoia/alexmingoia.com
